# BOOST1

src/: README.md  README.md~  cylinder_detection.rviz
src/DUO-Camera/: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~
src/DUO-Camera/calibration/: duo3d_left.yaml  duo3d_left_0421.yaml  duo3d_right.yaml  duo3d_right_0421.yaml
src/DUO-Camera/cfg/: Duo.cfg  Duo.cfg~
src/DUO-Camera/include/: duo.h  duo.h~
src/DUO-Camera/launch/: duo.launch
src/DUO-Camera/src/: duo.cpp  duo.cpp~  main.cpp
src/arm_executive/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/arm_executive/src/: arm_executive_image_stitch.cpp  arm_executive_node4.cpp  arm_executive_node4.cpp~
src/arm_executive/srv/: ArmInit.srv  ArmInitStitch.srv
src/automatic_exposure/: CMakeLists.txt  package.xml
src/automatic_exposure/src/: .automatic_exposure.cpp.swp  automatic_exposure_server.cpp  get_intensity.cpp
src/automatic_exposure/srv/: AutomaticExposure.srv
src/boost_arm/: CMakeLists.txt  package.xml
src/boost_arm/launch/: cylinder_arm2.launch  cylinder_arm2.launch~  cylinder_arm3.launch  cylinder_arm3.launch~  cylinder_arm4.launch  cylinder_arm5.launch  cylinder_arm5.launch~  cylinder_arm_bagdata.launch~  cylinder_arm_bagdata2.launch  cylinder_arm_bagdata2.launch~  kdc_arm.launch  kdc_arm.launch~
src/boost_urdf/: CMakeLists.txt  boost_stalker.launch  gazebo_music.launch  package.xml
src/boost_urdf/boost_stalker/meshes/: GPS_LINK.DAE  GPS_collision.stl  GPS_mount_link.DAE  (+56 more)
src/boost_urdf/robots/: boost_stalker.urdf  boost_stalker.urdf~
src/conv_net/: CMakeLists.txt  image_process_py.py~  package.xml  package.xml~
src/conv_net/src/: 2D_detect.cpp  2D_detect~  fpfh_test.cpp  image_process.cpp~  image_process.py  organized_test2.cpp  stitcher22.cpp  stitcher_CNN2.cpp
src/cylinder_segmentation/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/cylinder_segmentation/src/: cylinder_tracking7.cpp
src/data_recording/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/data_recording/data/: datalog.txt  datalog.txt~
src/data_recording/launch/: save_images.launch
src/data_recording/src/: bag2image.cpp  peak_logging.cpp  peak_logging.cpp~  peak_logging2.cpp  peak_logging2.cpp~  peak_logging3.cpp~  peak_logging4.cpp  peak_logging5.cpp
src/gripper/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/gripper/launch/: gripper.launch  gripper.launch~  gripper_bag.launch  gripper_bag.launch~
src/gripper/src/: gripper.cpp  gripper.cpp~  gripper2.cpp  gripper3.cpp  gripper3.cpp~  gripper4.cpp  gripper5.cpp  gripper5.cpp~  gripper6.cpp  gripper6.cpp~  gripperClose.cpp  gripperOpen.cpp  gripperOpen.cpp~  gripper_debug.cpp  load_cell_listener2.py  load_cell_ticksToPounds.cpp  load_cell_ticksToPounds.cpp~  load_cell_ticksToPounds2.cpp
src/gripper/srv/: GripperActuate.srv  GripperActuate.srv~  GripperClose.srv  GripperOpen.srv
src/hebi/: CMakeLists.txt  CMakeLists.txt~  README.txt  RUN_FOXBOT.sh  hebi.rviz  libhebi.so.0  package.xml
src/hebi/launch/: ARM.launch  foxbot.launch~  kdc_arm.launch
src/hebi/lib/: libhebi.so.0
src/hebi/src/: ARM_node.cpp  alpha_centroid.cpp  alpha_centroid2.cpp  alpha_centroid3.cpp  alpha_centroid_image_stitch.cpp  armCommandLine.cpp  armNAN.cpp  arm_config_service_node.cpp  arm_config_service_node2.cpp  arm_config_service_node3.cpp  arm_config_service_node4.cpp  arm_config_service_node4.cpp.autosave  arm_config_service_node5.cpp  arm_stow_initial.cpp  cylinder_reverse_node3.cpp  cylinder_reverse_node4.cpp  cylinder_reverse_node5.cpp  cylinder_servo_node3.cpp  cylinder_servo_node4.cpp  cylinder_servo_node5.cpp  cylinder_servo_node6.cpp  kdc_angle_plotter.py  kdc_arm_node.cpp  kdc_arm_node.cpp~  kdc_servo_node.cpp  servoVars.hpp  servoVars.hpp~  stage_immediate.cpp~  stage_node.cpp
src/hebi/srv/: AlphaCentroid.srv  AlphaCentroid.srv~  ArmConfigure.srv  ArmConfigure.srv~  ArmReverse.srv  ArmReverse.srv~  ArmServo.srv  ArmServo.srv~  StageImmediate.srv
src/image_stalker/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/image_stalker/scripts/: service_node.py  service_node.py~
src/image_stalker/srv/: ImageProcess.srv
src/image_stitch/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/image_stitch/include/: Vec3.h
src/image_stitch/launch/: image_stitch.launch  image_stitch.launch~
src/image_stitch/src/: basic_shapes.cpp  move_base.cpp  move_base2.cpp  move_base3.cpp  move_base3.cpp~  move_base4.cpp~  move_base5.cpp  move_base5.cpp~  move_base6.cpp  move_base6.cpp~  move_base7.cpp  organized_test.cpp  slow_down.cpp~  stitcher.cpp  stitcher10.cpp  stitcher10.cpp~  stitcher11.cpp  stitcher12.cpp  stitcher13.cpp  stitcher14.cpp  stitcher15.cpp  stitcher16.cpp  stitcher16_boost1.cpp  stitcher17.cpp  stitcher18.cpp  stitcher19.cpp  stitcher19_nuske_test.cpp  stitcher2.cpp~  stitcher20.cpp  stitcher21.cpp  stitcher22.cpp  stitcher3.cpp  stitcher4.cpp  stitcher4.cpp~  stitcher5.cpp~  stitcher6.cpp  stitcher6_simple.cpp  stitcher7.cpp  stitcher8.cpp  stitcher9.cpp  (+5 more)
src/image_stitch/srv/: CloudStitch.srv  ImageProcess.srv
src/kdc_arm_tf2/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/kdc_arm_tf2/src/: cylinder_pose_publisher.cpp  cylinder_to_tf2.cpp  kdc_board_pose_publisher.cpp  kdc_pose_tf.cpp  kdc_servo_node.cpp  kdc_z_follower.cpp
src/multisense/: .hgtags
src/multisense/.hg/: dirstate  hgrc  undo.desc
src/multisense/multisense_bringup/: multisense.launch  multisense_barebones.launch~  multisense_just_URDF.launch  multisense_mod.launch  multisense_mod.launch~
src/multisense/multisense_ros/: CMakeLists.txt
src/stopandgrab/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/stopandgrab/src/: stopgrab_node.cpp  stopgrab_node.cpp~
src/stopandgrab/waypoints/: points.txt  points.txt~
src/tf_test/: CMakeLists.txt~  package.xml
src/tf_test/src/: boost_odom_pub.cpp~
src/top_executive/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/top_executive/src/: executive_node.cpp  executive_node.cpp~  executive_node_stitch.cpp
src/top_executive/srv/: ArmInit.srv~  Exec.srv
(+332 files in other folders)
