<?xml version="1.0"?>
<package>
  <name>automatic_exposure</name>
  <version>0.0.0</version>
  <description>The automatic_exposure package automatically adjusts 
	DUO camera exposure to account for ambient light.</description>

  <maintainer email="oatesmargar@gmail.com">Maggie Oates</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
<!--  <build_depend>duo3d_camera</build_depend> -->
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
<!--  <run_depend>duo3d_camera</run_depend> -->
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_runtime</run_depend>
 
  <export>
  </export>
</package>
